# tbt

./: .gitignore  README.md  pyproject.toml
catalog/: raw.yml
catalog/gold/: artist_revenue.sql  customer_revenue.sql  genre_leaderboard.sql  top_genres.sql
catalog/raw/: Track.csv
catalog/silver/: country_codes.csv  customers.sql  invoices.sql  tracks.sql
src/tbt/: __init__.py  cli.py
